--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zod": "^3.22.4"
   }
 }
