--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "autoprefixer": "10.4.15",
     "clsx": "^2.0.0",
     "mongoose": "^7.5.0",
-    "next": "13.4.19",
+    "next": "^14.2.2",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
